--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node API 3 Project",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.11",
+    "morgan": "^1.10.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "knex-cleaner": "^1.3.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
